# sslcommerz-sdk

./: .editorconfig  .gitignore  .pylintrc  Makefile  README.md  README.rst  package.json  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  deploy.yml  docs.yml
dev/myapp/: urls.py  views.py
dev/mysite/: settings.py  urls.py  wsgi.py
docs/: best-practices.rst  conf.py  contributing.rst  index.rst  setup-payment-handler.rst  setup-store.rst
requirements/: base.txt  build.txt  dev.txt
src/sslcommerz_sdk/: __init__.py  exceptions.py  handlers.py  services.py  store.py  store_providers.py  testing.py
src/sslcommerz_sdk/contrib/django_app/: apps.py  models.py
src/sslcommerz_sdk/contrib/django_app/migrations/: 0001_initial.py
src/sslcommerz_sdk/orm_adapters/: base.py  django.py
sslcommerz_sdk/: __init__.py  enums.py  exceptions.py  handlers.py  helpers.py  services.py  store.py
sslcommerz_sdk/contrib/django_app/: __init__.py
sslcommerz_sdk/orm_adapters/: base.py  pynamodb.py  sqlalchemy.py
sslcommerz_sdk/querysets/: base.py  django.py
tests/: conftest.py  pip-constraints.txt  services.py  test_django.py  test_payment.py  test_pynamodb.py  test_sqlalchemy.py
